<resources>
    <string name="app_name">colorMyViews</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="button_red">RED</string>
    <string name="button_yellow">YELLOW</string>
    <string name="button_green">GREEN</string>
    <string name="how_to_play">How to play</string>
    <string name="tap_the_boxes_and_buttons">Tap the Boxes and Buttons</string>
    <string name="red_button_text">Red</string>
    <string name="yellow_button_text">Yellow</string>
    <string name="green_button_text">Green</string>
    <string name="tap_in_this_box">Tap on this box</string>
    <string name="pink_button">Pink</string>
    <string name="button_blue">Blue</string>
    <string name="brown_button_text">Brown</string>

</resources>